# historic-ports

./: AUTHORS  ChangeLog  End User License Hexen Source Code.doc  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.adoc  SourceReadme.txt  about.txt  acconfig.h  aclocal.m4  allegvid.c  allegvid.h  am_data.h  am_map.c  am_map.h  config.h  config.h.in  config.status  configure  configure.in  ct_chat.c  d_debug.h  d_deh.c  d_deh.h  d_dutch.h  d_englsh.h  d_event.h  d_french.h  d_germ1.h  d_germ2.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_net.h  (+254 more)
Heretic Source/: d_net.c  doomdef.h  g_old.c  i_sound.c  m_misc.c  r_data.c  r_draw.c  r_things.c  v_video.c  w_wad.c  wadlink.wl
Hexen Source/: d_net.c  g_game.c  h2_main.c  h2def.h  i_sound.c  in_lude.c  m_misc.c  mn_menu.c  p_user.c  r_data.c  r_draw.c  r_things.c  st_start.c  v_video.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
data/: Makefile  Makefile.am  Makefile.in
ddf/: anims.ddf  attacks.ddf  creature.ddf  creature.df2  default.ldf  items.ddf  itemsddf.txt  levels.ddf  lines.ddf  mission.ddf  scenery.ddf  sectors.ddf  sounds.ddf  switch.ddf  things.ddf  weapons.ddf
djgpp/: Makefile  allegvid.c  copyfile.bat  dosdoom.gdt  dosdoom.gpr  i_alleg.h  i_allegv.c  i_allegv.h  i_main.c  i_music.c  i_music.h  i_net.c  i_sound.c  i_sound.h  i_system.c  i_system.h  i_video.c  i_video.h  mus_midi.c  mus_mod.c  mus_mod.h  mus_mp3.c  mus_mp3.h  mus_mus.c  mus_mus.h
djgpp/libamp/: a_alleg.c  audio.c  audioalg.h  audioioi.c  audioiol.c  audioios.c  bugs  configur  configur.in  controld.h  getbits.c  getdata.c  gmon.out  layer2.c  layer2.h  layer3.c  libamp.gdt  libamp.gpr  libamp.mak  libdemo.gdt  libdemo.gpr  makefile.in  misc2.c  misc2.h  real.h
djgpp/libjgmod/: data_mod.c  effects.txt  jgmod.gdt  jgmod.gpr  jgmod.h  libjgmod.gdt  libjgmod.gpr  load_mod.c  load_s3m.c  makefile  mod.c
doc/: Makefile  Makefile.am  Makefile.in  boom.cfg.5  lsdldoom-game-server.6  lsdldoom.6  lsdldoom.cfg.5
doc/lxdoom/: NEWS
docs/: DOSDOOM.TXT  dosdoom.history  readme.sprites
docs/html/: credits.htm  dosdoom.htm  music.htm  radius.htm  sprites.htm
docs/text/: coders.txt  dosdoom.txt  history.txt  linux.txt  rts.txt  sounds.txt  things.txt
dos/: tmp.txt
libs/bcd/: bcd.c  bcd.doc  bcd.h  file_id.diz  libbcd.gdt  libbcd.gpr  libbcd.mak  makefile
libs/libamp/: amp.1  args.c  audio.h  audioalg.c  audioio.c  audioio.h  audioioa.c  audioiob.c  audioioh.c  audiolib.c  audstr.c  buffer.c  changes  config.h  config.h-i  formats.c  getbits.c  getdata.c  guicontrol.h  layer2.c  layer3.c  layer3.h  libamp.gdt  libamp.gpr  libamp.h  libamp.mak  libdemo.c  libdemo.gdt  libdemo.gpr  libdemo.mak  makefile  makefile.amp  misc2.c  position.c  proto.h  stream.h  stream2.c  todo  transfor.c  transform.h  (+1 more)
libs/libjgmod/: data_mod.c  data_s3m.c  history.txt  jgmod.c  jgmod.gdt  jgmod.gpr  jgmod.h  libjgmod.gdt  libjgmod.gpr  libjgmod.mak  mod.c  player.c  readme.txt
linux-x/: Makefile  dosdoom.gdt  dosdoom.gpr  i_net.c  i_sound.c  i_system.c  i_video.c
makfiles/: makefile.c32  makefile.dos  makefile.m32
net/null/: doomnet.cpp  doomnet.h  nullnet.cpp  nullnet.h  nullsetu.cpp  nullsetu.gdt  nullsetu.gpr
psdoom-data/: README  psdoom1.wad  psdoom2.wad
psdoomdoc/: CHANGELOG  README  TODO
sndserv/: linux.c  sounds.c  sounds.h  soundsrv.c  soundsrv.h  soundst.h  wadread.c  wadread.h
src/: Makefile  Makefile.am  Makefile.in  am_map.c  am_map.h  d_client.c  d_deh.c  d_deh.h  d_englsh.h  d_event.h  d_french.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_server.c  d_textur.h  d_think.h  d_ticcmd.h  doomdata.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  doomtype.h  drawasm.h  drawasm.nas  drawcol.S  drawcol.s  drawspan.S  drawspan.s  dstrings.c  dstrings.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  (+151 more)
src/.deps/: am_map.Po  d_client.Po  d_deh.Po  d_items.Po  d_main.Po  d_server.Po  doomdef.Po  doomstat.Po  drawcol.Po  drawspan.Po  dstrings.Po  f_finale.Po  f_wipe.Po  g_game.Po  hu_lib.Po  hu_stuff.Po  info.Po  l_joy.Po  l_main.Po  l_sdl.Po  l_sound_sdl.Po  l_system.Po  l_udp.Po  l_video_sdl.Po  l_video_trans.Po  lprintf.Po  m_argv.Po  m_bbox.Po  m_cheat.Po  m_menu.Po  m_misc.Po  m_random.Po  p_ceilng.Po  p_doors.Po  p_enemy.Po  p_floor.Po  p_genlin.Po  p_inter.Po  p_lights.Po  p_map.Po  (+32 more)
strcode/: MAKECODE  STRINGS.C  make.bat  makecode.cc  strings.h
txts/: log_pr.txt
txts/boom/: log_lee.txt
wad/: dosdoom.wad
win32/: dosdoom.gdt  dosdoom.gpr  dosdoom.mak  i_allegv.c  i_main.c  i_net.c  i_sound.c  i_system.c
xdlaunch/: xdlaunch
xdoomsrc/: GNUmakefile  Makefile
xdoomsrc/contrib/: README  glxdoom.sh  showkey.c  sxdoom.sh  xdoom.sh
xdoomsrc/data/: Makefile  README  comdev.ppm  common.acs  defs.acs  dsbeep.sfx  dsbeep2.sfx  dschgun.sfx  m_cdvol.ppm  m_horsen.ppm  m_versen.ppm  multigen.txt  specials.acs  wvars.acs  xdoom.res  xdoom.wad  xdoom.wgc
xdoomsrc/doc/: COPYING  CREDITS  INSTALL  INSTRUCTIONS  PORTING  README  RELEASE.NOTES  SPECS.xdoom  SPECS.xdoomplus  dmfaq666.txt  xdoom.6
xdoomsrc/musserv/: ChangeLog  Makefile.freebsd  Makefile.linux  Makefile.linux-ppc  Makefile.linux-x86  Makefile.scoos5  Makefile.scouw2  Makefile.scouw7  Makefile.sol-x86  README  musserver.c  musserver.h  musserver.sh  playmus.c  readwad.c  sequencer.c  usleep.c  usleep.h
xdoomsrc/pwads/: README
xdoomsrc/sndserv/: ChangeLog  Makefile.freebsd  Makefile.linux  Makefile.linux-ppc  Makefile.linux-x86  Makefile.scoos5  Makefile.scouw2  Makefile.scouw7  Makefile.sol-x86  oss.c  sounds.c  sounds.h  soundsrv.c  soundsrv.h  soundst.h  strcmp.c  strcmp.h  wadread.c  wadread.h
xdoomsrc/xdoom/: ChangeLog  Makefile.aix  Makefile.freebsd  Makefile.irix  Makefile.linux-alpha  Makefile.linux-ppc  Makefile.linux-x86  Makefile.scoos5  Makefile.scouw2  Makefile.scouw7  Makefile.sol-x86  Makefile.solsparc  alloca.c  am_map.c  am_map.h  asmmod-x86.s  cd_audio.h  cd_cda.c  cd_dummy.c  cd_ioctl_fbsd.c  cd_ioctl_linux.c  cd_stub.c  d_englsh.h  d_event.h  d_french.h  d_items.c  d_items.h  (+141 more)
(+101 files in other folders)
