#
# Top level automake Makefile.am for LxDoom
#
# $Id: Makefile.am,v 1.3 1999/10/12 17:48:37 cphipps Exp $
#

SUBDIRS = doc data src
EXTRA_DIST = ChangeLog

#
# $Log: Makefile.am,v $
# Revision 1.3  1999/10/12 17:48:37  cphipps
# Remove CREDITS
#
# Revision 1.2  1999/10/01 20:38:00  cphipps
# Added ChangeLog to distributed files
#
# Revision 1.1  1999/09/10 20:08:16  cphipps
# Initial revision
#
#
