## Process this file with automake to produce Makefile.in
#
# Makefile.am for LxDoom doc directory
#
# $Id: Makefile.am,v 1.2 1999/10/12 17:49:37 cphipps Exp $
#

man_MANS=lxdoom.6 boom.cfg.5 lxdoom-game-server.6
EXTRA_DIST=old-source-docs.tar.gz boom.txt boomref.txt lxdoom.6 boom.cfg.5 lxdoom-game-server.6

#
# $Log: Makefile.am,v $
# Revision 1.2  1999/10/12 17:49:37  cphipps
# Remove doomlic.txt
#
# Revision 1.1  1999/09/18 12:39:08  cphipps
# Initial revision
#
#
