## Process this file with automake to produce Makefile.in
#
# Makefile.am for LxDoom doc directory
#
# $Id: Makefile.am,v 1.3.4.1 2000/03/28 17:14:01 cph Exp $
#

docdir=$(prefix)/share/doc/@PACKAGE@
man_MANS=lsdldoom.6 lsdldoom.cfg.5 lsdldoom-game-server.6
doc_DATA=boom.txt boomref.txt
EXTRA_DIST=boom.txt boomref.txt lsdldoom.6 lsdldoom.cfg.5 lsdldoom-game-server.6

#
# $Log: Makefile.am,v $
# Revision 1.3.4.1  2000/03/28 17:14:01  cph
# Fix install dir for docs
#
# Revision 1.3  2000/03/16 20:14:08  cph
# Add docs to make install, add RPM building
#
# Revision 1.2  1999/10/12 17:49:37  cphipps
# Remove doomlic.txt
#
# Revision 1.1  1999/09/18 12:39:08  cphipps
# Initial revision
#
#
